chore(repo): first commit

--- a/package.json
+++ b/package.json
@@ -1,13 +1,4 @@
 {
-  "name": "chat-genius-next",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "eslint"
-  },
   "dependencies": {
     "next": "16.1.5",
     "react": "19.2.3",
@@ -19,9 +10,34 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "babel-plugin-react-compiler": "1.0.0",
+    "commitizen": "^4.3.1",
+    "cz-conventional-changelog": "^3.3.0",
     "eslint": "^9",
     "eslint-config-next": "16.1.5",
+    "eslint-config-prettier": "^10.1.8",
+    "husky": "^9.1.7",
+    "lint-staged": "^16.2.7",
+    "prettier": "3.8.1",
     "tailwindcss": "^4",
     "typescript": "^5"
+  },
+  "lint-staged": {
+    "**/*": "prettier --write --ignore-unknown"
+  },
+  "name": "chat-genius-next",
+  "private": true,
+  "scripts": {
+    "build": "next build",
+    "commit": "cz",
+    "dev": "next dev",
+    "lint": "eslint",
+    "start": "next start",
+    "prepare": "husky"
+  },
+  "version": "0.1.0",
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-conventional-changelog"
+    }
   }
 }
